# quad_scrape

./: README.md  REPOSITORY_WALKTHROUGH.md  TECH_DEBT_REPORT.md  audit_norm.py  extract_text_ocr.py  make_chunks.py  make_chunks_deep.py  process_outputs.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
combo/: __main__.py
combo/pipeline/: __init__.py  promote.py
data/: test.pptx
emb/: quad2006.normalized.embedded.jsonl
emb/_reports/: doctor_local.json
emb_reports/: doctor_bge_small_q4km.json  doctor_nomic.json  doctor_nomic_lc.json  doctor_nomic_q4km_512.json
ingest/: README.md  audit_norm.py  check_env.py  download_model.py  extract_text_docling.py  extract_text_ocr.py  extract_text_ocr_nanonets.py  extract_v2_docling.py  extract_v3_docling.py  extract_v4_1_docling.py  extract_v4_docling.py  fix_path.py  hardcode_paths.py  make_chunks_deep.py  patch_all_indexes.py  patch_index.py  pdf_conversion_utility.py  scan_ssa_refs.py
ingest/chunks/: RDER_Sea_Spyder_ Quad_ 10AUG23.jsonl
ingest_dev/: README.md  extract_v4_1_docling.py  ingest_multi_format_v1.py  ingest_multi_format_v2.py  make_chunks_deep.py
ingest_dev/input/: CC RPP Quad Chart .pptx  (+1 more)
normalized/: quad2006.normalized.json
outputs/: extracted.json  extracted_tesseract.json
src/: __init__.py
step_D_tests/: data_registry.sqlite
tests/: conftest.py
tmp_chunks/: array_payload.2.normalized.jsonl  array_payload.normalized.jsonl  nonpdf_simple.normalized.jsonl  object_payload.normalized.jsonl  pdf_cross_page.normalized.jsonl  pdf_simple.normalized.jsonl  unicode_mixed.normalized.jsonl
tmp_emb_local/: array_payload.2.normalized.embedded.jsonl  array_payload.normalized.embedded.jsonl  manifest.json  nonpdf_simple.normalized.embedded.jsonl  object_payload.normalized.embedded.jsonl  pdf_cross_page.normalized.embedded.jsonl  pdf_simple.normalized.embedded.jsonl  unicode_mixed.normalized.embedded.jsonl
tmp_idx/: embeddings.npz
tmp_norm/: array_payload.2.normalized.json  nonpdf_simple.normalized.json  object_payload.normalized.json  pdf_cross_page.normalized.json  pdf_simple.normalized.json
tmp_norm_jsonl/: array_payload.normalized.jsonl  unicode_mixed.normalized.jsonl
tools/: assert_success.ps1  print_summary.ps1
(+152 files in other folders)
