[tool.poetry]
name = "quad_scrape"
version = "0.1.0"
description = "Scraping project"
authors = ["kaiello"]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
Pillow = ">=9.5"
transformers = ">=4.40"
torch = ">=2.2"
pytesseract = ">=0.3.10"
easyocr = ">=1.7"
numpy = ">=1.24"
pymupdf = ">=1.23"
pypdf = ">=4.0"
pdf2image = ">=1.17"
spacy = ">=3.7,<3.9"
PyYAML = ">=6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
