[tool.poetry]
name = "combo"
version = "0.1.0"
description = "Scraping project"
authors = ["kaiello"]
packages = [{ include = "combo", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Pillow = ">=9.5"
transformers = ">=4.40"
torch = ">=2.2"
pytesseract = ">=0.3.10"
easyocr = ">=1.7"
numpy = "<2"
pymupdf = ">=1.23"
pypdf = ">=4.0"
pdf2image = ">=1.17"
spacy = ">=3.7,<3.9"
PyYAML = ">=6.0"
unstructured = {version = "^0.18.20", extras = ["all-docs"]}
langchain-community = "^0.2.5"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.scripts]
combo-embed = "src.combo.embed.cli:main"
combo-er = "src.combo.er.cli:main"
combo-coref = "src.combo.coref.cli:main"
combo-normalize = "src.combo.normalize.cli:main"
combo-validate = "src.combo.validate.cli:main"
